# weather-helper

./: .gitignore  LICENSE  README.md  WeatherHelper.spec  api_client.py  build.py  colors.py  config.py  core_utils.py  data_models.py  display_comparison.py  display_core.py  display_forecast.py  display_utils.py  forecast_analysis.py  forecast_processing.py  locations.py  main.py  pyproject.toml  requirements.txt  run_gui.spec  scoring_utils.py  setup.py  weather_api.py  weather_helper.py  weather_helper_mobile.py  weather_utils.py
.github/workflows/: build-exe.yml  ci.yml  release.yml  run-tests.yml  test.yml
core/: __init__.py  config.py  core_utils.py
data/: __init__.py  data_models.py  forecast_processing.py  locations.py  scoring_utils.py  weather_api.py
display/: __init__.py  display_comparison.py  display_core.py  display_forecast.py
docs/: android-development.md
src/: __init__.py  daily_report.py  locations.py  main.py  utils.py  weather_api.py
src/application/: __init__.py  forecast_service.py  presentation.py
src/core/: __init__.py  config.py  core_utils.py  daily_report.py  enums.py  evaluation.py  hourly_weather.py  locations.py  models.py  scoring.py  types.py  weather_api.py
src/data/: __init__.py  data_models.py  forecast_processing.py  scoring_utils.py  weather_api.py
src/display/: __init__.py  colors.py  display_comparison.py  display_core.py  display_forecast.py
src/gui/: __init__.py  app.py  formatting.py  themes.py  widgets.py
src/mobile/: __init__.py  app.py  view_model.py
src/utils/: misc.py
tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_daily_report.py  test_data_rendering.py  test_evaluation.py  test_forecast_service.py  test_formatting.py  test_gui.py  test_gui_logic.py  test_hourly_weather.py  test_location_groups.py  test_locations.py  test_main.py  test_misc.py  test_mobile_entry_point.py  test_mobile_view_model.py  test_models.py  test_optimal_block.py  test_processing.py  test_scoring.py  test_themes.py  test_utils.py  test_weather_api.py
tests/core/: test_config.py  test_daily_report.py  test_hourly_weather.py  test_locations.py  test_weather_api.py
tests/gui/: test_app.py  test_gui.py  test_widgets.py
tests/utils/: test_misc.py
