[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-helper"
version = "1.0.0"
description = "A simple weather helper application."
dependencies = [
    "pytz==2025.2",
    "pytest==8.3.5",
    "requests==2.32.4",
    "pyinstaller==6.14.1"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]

[tool.coverage.run]
omit = [
    "src/gui/app.py",
    "src/__init__.py",
    "src/gui/__init__.py",
    "src/core/__init__.py"
]
source = ["src"]