[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-helper"
version = "1.0.0"
description = "A simple weather helper application."
requires-python = ">=3.10"
dependencies = [
    "pytz==2025.2",
    "requests==2.32.4"
]

[project.optional-dependencies]
mobile = [
    "flet[cli,desktop]==0.85.3"
]
dev = [
    "pytest==8.3.5"
]
windows-build = [
    "pyinstaller==6.14.1"
]

[tool.flet]
product = "Weather Helper"
artifact = "weather-helper"
org = "com.maximbk"
bundle_id = "com.maximbk.weatherhelper"
build_number = 1

[tool.flet.app]
module = "weather_helper_mobile.py"

[tool.flet.android]
dependencies = [
    "flet==0.85.3"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]

[tool.coverage.run]
omit = [
    "src/gui/app.py",
    "src/__init__.py",
    "src/gui/__init__.py",
    "src/core/__init__.py"
]
source = ["src"]
