[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-helper"
version = "1.2.8"
description = "A simple weather helper application."
requires-python = ">=3.10"
dependencies = [
    "pytz==2025.2",
    "requests==2.32.4"
]

[project.optional-dependencies]
mobile = [
    "flet[cli,desktop]==0.85.3"
]
dev = [
    "pytest==8.3.5"
]
windows-build = [
    "pyinstaller==6.14.1"
]

[tool.flet]
product = "Weather Helper"
artifact = "weather-helper"
org = "com.maximbk"
bundle_id = "com.maximbk.weatherhelper"
build_number = 2

[tool.flet.app]
module = "weather_helper_mobile.py"

[tool.flet.android]
adaptive_icon_background = "#102A43"
dependencies = [
    "flet==0.85.3"
]

[tool.pytest.ini_options]
markers = [
    "windows_gui: tests that exercise the Tkinter interface and require Windows CI",
]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]

[tool.coverage.run]
omit = [
    "src/gui/app.py",
    "src/__init__.py",
    "src/gui/__init__.py",
    "src/core/__init__.py"
]
source = ["src"]
